# Turtlebot_Navigation

./: Doxyfile  README.md  install.sh  launchTbot.desktop  openTurtleBot.sh  recompile.sh
docs/html/: annotated.html  classes.html  classodometer-members.html  classodometer.html  classodometer__coll__graph.map  classodometer__coll__graph.md5  classrigid2d_1_1DiffDrive-members.html  classrigid2d_1_1DiffDrive.html  classrigid2d_1_1DiffDrive__coll__graph.map  classrigid2d_1_1DiffDrive__coll__graph.md5  classrigid2d_1_1Transform2D-members.html  classrigid2d_1_1Transform2D.html  classrigid2d_1_1Transform2D__coll__graph.map  classrigid2d_1_1Transform2D__coll__graph.md5  classrigid2d_1_1Twist2D-members.html  classrigid2d_1_1Twist2D.html  classrigid2d_1_1WayPoints-members.html  classrigid2d_1_1WayPoints.html  diff__drive_8hpp.html  diff__drive_8hpp__incl.map  diff__drive_8hpp__incl.md5  diff__drive_8hpp_source.html  dir_000004_000002.html  dir_11c178b0ac4cdbde242bfc1875e24d16.html  dir_1881c46982a0d333a30414d11fa3611d.html  dir_1881c46982a0d333a30414d11fa3611d_dep.map  dir_1881c46982a0d333a30414d11fa3611d_dep.md5  dir_4a383706f7cdb39075c41557f4a1aa08.html  dir_4a383706f7cdb39075c41557f4a1aa08_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_a5389ab5f2d7be3a203ca886fdfc4619.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  index.html  md_README.html  (+16 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  pages_0.js  related_0.js  searchdata.js  variables_0.js
docs/latex/: annotated.tex  classodometer.tex  classodometer__coll__graph.md5  classrigid2d_1_1DiffDrive.tex  classrigid2d_1_1DiffDrive__coll__graph.md5  classrigid2d_1_1Transform2D.tex  classrigid2d_1_1Transform2D__coll__graph.md5  classrigid2d_1_1Twist2D.tex  classrigid2d_1_1WayPoints.tex  diff__drive_8hpp.tex  diff__drive_8hpp__incl.md5  dir_11c178b0ac4cdbde242bfc1875e24d16.tex  dir_1881c46982a0d333a30414d11fa3611d.tex  dir_4a383706f7cdb39075c41557f4a1aa08.tex  dir_4a383706f7cdb39075c41557f4a1aa08_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a5389ab5f2d7be3a203ca886fdfc4619.tex  files.tex  md_README.tex  refman.tex  rigid2d_8hpp.tex  rigid2d_8hpp__dep__incl.md5  rigid2d_8hpp__incl.md5  structrigid2d_1_1Vector2D.tex  structrigid2d_1_1WheelVelocities.tex  waypoints_8hpp.tex  waypoints_8hpp__incl.md5
rigid2d/: README.md  config.json  main.cpp  rigid2d.cpp  rigid2d.hpp  test_compile.bash
rigid2d/test/: README.md
rigid2d/test/inputs/: test0.txt  test1.json  test1.txt  test3.json  test5.json
rigid2d/test/outputs/: test1.txt  test2.json  test4.json  test5.json
src/motion_planning/: CMakeLists.txt  package.xml
src/motion_planning/include/motion_planning/: A_Star_Planner.hpp  gridCell.hpp
src/motion_planning/launch/: motion_planner.launch
src/motion_planning/src/: A_Star_Planner_Node.cpp
src/motion_planning/src/motion_planning/: A_Star_Planner.cpp  gridCell.cpp
src/motion_planning/srv/: plan.srv
src/motion_planning/test/: README.md  test_astar.cpp
src/motion_planning/test/test_grids/: README.md  grid1.csv  grid2.csv  grid3.csv  grid4.csv  grid5.csv
src/nuturtle_description/: CMakeLists.txt  README.md  package.xml
src/nuturtle_description/config/: diff_drive.rviz  diff_params.yaml
src/nuturtle_description/launch/: view_diff_drive.launch
src/nuturtle_description/urdf/: diff_drive.urdf.xacro
src/nuturtle_gazebo/: CMakeLists.txt  README.md  package.xml
src/nuturtle_gazebo/config/: grid_world.world  myWorld.world  plugin_params.yaml
src/nuturtle_gazebo/launch/: diff_drive_gazebo.launch
src/nuturtle_gazebo/src/: gazebo_motion_planning.cpp  gazebo_waypoints.cpp  turtle_drive_plugin.cpp
src/nuturtle_gazebo/srv/: start_waypoints.srv
src/nuturtle_gazebo/urdf/: diff_drive.gazebo.xacro
src/nuturtle_robot/: CMakeLists.txt  README.md  package.xml
src/nuturtle_robot/launch/: basic_remote.launch  follow_waypoints.launch  test_movement.launch
src/nuturtle_robot/src/: real_waypoint.cpp  rotation.cpp  test_turtle_interface.cpp  translate.cpp  turtle_interface.cpp
src/nuturtle_robot/srv/: start.srv  start_waypoints.srv
src/nuturtle_robot/test/: interface.test  test_turtle_interface.cpp
src/nuturtlebot/: CMakeLists.txt  package.xml
src/nuturtlebot/models/cylinder/: model.sdf
src/nuturtlebot/models/wall/: model.sdf
src/nuturtlebot/worlds/: block.world  test.world
src/rigid2d/: CMakeLists.txt  README.md  package.xml
src/rigid2d/include/rigid2d/: diff_drive.hpp  rigid2d.hpp  waypoints.hpp
src/rigid2d/src/: fake_diff_encoders_node.cpp  odometer_node.cpp  rigid2d_node.cpp
src/rigid2d/src/rigid2d/: diff_drive.cpp  rigid2d.cpp  waypoints.cpp
src/rigid2d/test/: README.md  test_rigid2d.cpp
src/rigid2d/test/handCalculations/: README.md
src/rigid2d/test/handCalculations/outputs/: test1.json  test4.json
src/rigid2d/test/inputs/: test1.json  test2.json  test4.json
src/rigid2d/test/outputs/: test3.json  test5.json
src/tsim/: CMakeLists.txt  README.md  package.xml
src/tsim/config/: params.yaml  params_waypoints.yaml
src/tsim/launch/: trect.launch  turtle_odom.launch  turtle_pent.launch
src/tsim/msg/: PoseError.msg
src/tsim/src/: serviceNode.cpp  turtle_rect.cpp  turtle_way.cpp
