<?xml version="1.0"?>
<package format="2">
  <name>motion_planning</name>
  <version>1.0.0</version>
  <description>Gazebo interface for the turtlebot</description>

  <maintainer email="peterjochem2020@u.northwestern.edu">Peter Jochem</maintainer>
  <license>MIT</license>

  <url type="website">https://peterjochem.github.io/Portfolio</url>
  <author email="peterjochem2020@u.northwestern.edu">Peter Jochem</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
 
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
