<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_robot</name>
  <version>0.0.1</version>
  <description>Lower level link/interface to the openCR board</description>

  <maintainer email="peterjochem2020@u.northwestern.edu">Peter Jochem</maintainer>

  <license>MIT</license>
  
  <url type="website">https://peterjochem.github.io/Portolio</url>
  <author email="peterjochem2020@u.northwestern.edu"> Peter Jochem </author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>  
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>  
  <build_export_depend>visualization_msgs</build_export_depend> 
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <depend>rigid2d</depend>
  <depend>nuturtlebot</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
